// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can accept custom labels 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal-confirm"
    style="width: 520px;"
  >
    <div>
      <div
        class="ModalHeader"
        data-test-id="cf-ui-modal-header"
      >
        <h1
          class="ModalHeader__title"
        >
          Are you sure?
        </h1>
      </div>
      <div
        class="ModalContent"
        data-test-id="cf-ui-modal-content"
      >
        ModalConfirm
      </div>
      <div
        class="ModalControls"
        data-test-id="cf-ui-modal-controls"
      />
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal-confirm"
    style="width: 520px;"
  >
    <div>
      <div
        class="ModalHeader"
        data-test-id="cf-ui-modal-header"
      >
        <h1
          class="ModalHeader__title"
        >
          Are you sure?
        </h1>
      </div>
      <div
        class="ModalContent"
        data-test-id="cf-ui-modal-content"
      >
        ModalConfirm
      </div>
      <div
        class="ModalControls"
        data-test-id="cf-ui-modal-controls"
      />
    </div>
  </div>
</div>
`;

exports[`renders the component with override header, content and controls 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal-confirm"
    style="width: 520px;"
  >
    <div>
      <div
        class="ModalHeader additional header class"
        data-test-id="cf-ui-modal-header"
      >
        <h1
          class="ModalHeader__title ModalHeader__title--is-not-wrapped"
        >
          Are you sure?
        </h1>
      </div>
      <div
        class="ModalContent additional content class"
        data-test-id="cf-ui-modal-content"
      >
        ModalConfirm
      </div>
      <div
        class="ModalControls additional controls class"
        data-test-id="cf-ui-modal-controls"
      />
    </div>
  </div>
</div>
`;
